<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_fullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/dp_20"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dp_20"
        />

    <EditText
        android:id="@+id/edit_text_born"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_fullname"
        android:layout_margin="@dimen/dp_20"
        android:hint="@string/input_born"
        />

    <EditText
        android:id="@+id/edit_text_birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_born"
        android:layout_margin="@dimen/dp_20"
        android:inputType="date"
        android:hint="@string/input_birthday"
        />

    <EditText
        android:id="@+id/edit_text_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_birthday"
        android:layout_margin="@dimen/dp_20"
        android:hint="@string/input_gender"
        />

    <EditText
        android:id="@+id/edit_text_class"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_gender"
        android:layout_margin="@dimen/dp_20"
        android:hint="@string/input_class"
        />


    <EditText
        android:id="@+id/edit_text_cource"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_class"
        android:layout_margin="@dimen/dp_20"
        android:hint="@string/input_course"
        />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_cource"
        android:layout_marginTop="@dimen/dp_20"
        />

</android.support.constraint.ConstraintLayout>
